[project]
name = "app-lab"
version = "0.1.0"
description = "app-lab"
authors = [
    {name = "Dowson Chen"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.116.0,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run-todo = "python apps/todo/main.py"
serve-todo = "uvicorn apps.todo.main:app --reload"
format = "black ."
lint = "flake8 apps common"
test = "pytest"

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]  # ignores conflicts with black
exclude = ["__pycache__", ".venv", "build", "dist", ".git", ".mypy_cache", ".pytest_cache"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
